# clearlinux

./: README
CPAN-Meta-Check-0.011/: Changes  MANIFEST  META.json  META.yml  Makefile.PL  README
DateTime-TimeZone-1.88/: Changes  MANIFEST  META.json  META.yml  Makefile.PL  README.md
DateTime-TimeZone-1.88/t/: 00-report-prereqs.dd  author-eol.t  author-no-tabs.t  author-pod-spell.t
Encode-Locale-1.04/: META.json  META.yml
IO-Socket-SSL-2.015/: META.json  META.yml
Params-Validate-1.18/: MANIFEST  META.json  META.yml
TAP-Harness-Archive-0.17/: META.json  META.yml
Test-Deep-0.115/: META.json  META.yml
Test-Pod-1.49/: MANIFEST  META.json  META.yml  Makefile.PL
Test-Warnings-0.021/: MANIFEST  META.json  META.yml  Makefile.PL  README
Test-Warnings-0.021/t/: 00-report-prereqs.dd  zzz-check-breaks.t
URI-1.67/: MANIFEST  META.json  META.yml
XStatic-Angular-Irdragndrop-1.0.2.1/: README.txt
XStatic-Angular-Irdragndrop-1.0.2.1/XStatic_Angular_Irdragndrop.egg-info/: PKG-INFO  SOURCES.txt
YAML-Tiny-1.67/: MANIFEST  META.json  META.yml  Makefile.PL  README
YAML-Tiny-1.67/t/: 00-report-prereqs.dd
aioeventlet-0.4/: PKG-INFO
aioeventlet-0.4/aioeventlet.egg-info/: SOURCES.txt  requires.txt
alembic-0.7.6/docs/: api.html
check-0.9.14/: check_stdint.h
check-0.9.14/src/: check.h
cinder-2015.1.0rc2/: ChangeLog
cinder-2015.1.0rc2/cinder.egg-info/: PKG-INFO
clr-ovmf-bin-2/: Makefile.am  configure.ac
clr-power-tweaks-21/: template
clr-power-tweaks-21/src/: ethernet.c  lib.c  main.c  pci.c  sata.c  usb.c  vm.c  watchdog.c
clr-specialized-updaters-3.31/: Makefile.am  bootstrap.sh  clr-kernel-updater-boot-check.service  configure.ac  gummiboot_updaters.sh  kernel_updater.sh  report_kernel_booted.sh  run_test.sh
clr-specialized-updaters-3.31/test/boot/EFI/Linux/: org.clearlinux.nativeRETAIN.3.19.2-40.efi
clr-specialized-updaters-3.31/test/boot/EFI/gummiboot/bak/: gummibootx64.efi
clr-specialized-updaters-3.31/test/usr/lib/gummiboot/: gummibootx64.efi
clr-systemd-config-46/: Makefile.am  configure.ac
clr-systemd-config-46/bootchart.conf.d/: clear.conf
clr-systemd-config-46/etc/: gshadow.in
clr-systemd-config-46/journal.conf.d/: clear.conf
clr-systemd-config-46/network/: 80-virtio.network
clr-systemd-config-46/system/: clr-locale.service  ldconfig-trigger.service  locale-archive-trigger.service  locale-archive.service  mandb-trigger.service  remount.service  tmpfiles-trigger.service  update-triggers.target
clr-systemd-config-46/system-preset-transient/: 80-clear.preset
clr-systemd-config-46/sysusers.d/: clear.conf
clr-systemd-config-46/t/: sysusers.t
connect-proxy-1/: Makefile.am  configure.ac
connect-proxy-1/src/: connect-proxy.1  connect.c
cracklib-2.9.4/: configure
dbus-1.9.10/: configure
dbus-1.9.10/test/: Makefile.in
dbus-1.9.10/tools/: Makefile.in
dbus-glib-0.104/: ChangeLog  Makefile.in  aclocal.m4  configure
dbus-glib-0.104/dbus/: Makefile.in
dbus-glib-0.104/doc/: Makefile.in
dbus-glib-0.104/m4/: Makefile.in
dbus-glib-0.104/test/: Makefile.in
dbus-glib-0.104/tools/: Makefile.in
dejagnu-1.5.2/doc/: dejagnu.info
glance-2015.1.0/: setup.cfg
glance-2015.1.0/glance.egg-info/: SOURCES.txt  entry_points.txt
httpretty-0.8.10/: test-requirements.txt
kbd-2.0.2/docs/: Makefile
keystone-2015.1.0/: AUTHORS  ChangeLog  setup.cfg
less-475/: README  less.man  less.nro  lessecho.man  lessecho.nro  lesskey.man  lesskey.nro
libdrm-2.4.61/: Makefile.in  aclocal.m4  configure
libidn-1.30/: ChangeLog  config.h.in  configure
libtasn1-4.5/: configure
libvirt-python-1.2.14/: ChangeLog
lme4/: MD5
neutron-2015.1.0rc3/: ChangeLog  PKG-INFO
otp_src_17.5/: prebuilt.files  proposed_updates.json
p11-kit-0.23.1/: Makefile.in  aclocal.m4  config.h.in  configure
qpid-python-0.26.1/: PKG-INFO  setup.py
rabbitmq-server-3.5.2/: version.mk
stevedore-1.3.0/: test-requirements.txt
swupd-client-2.36/: COPYING  Makefile.am  configure.ac  template
swupd-client-2.36/bsdiff/: README.Intel  README.chromium  diff.c  patch.c
swupd-client-2.36/include/: executor.h  list.h  log.h  progress.h  swupd.h
swupd-client-2.36/src/: clr_bundle_add.c  clr_bundle_rm.c  curl.c  delta.c  diskspace.c  download.c  efivars.c  esp.c  executor.c  filedesc.c  globals.c  hash.c  hashdump.c  helpers.c  heuristics.c  list.c  lock.c  log.c  main.c  manifest.c  packs.c  progress.c  scripts.c  signature.c  staging.c  stats.c  subscriptions.c  tm_report.c  update.c  update_boot_loader_pref.c  urls.c  verify.c  version.c  xattrs.c
swupd-client-2.36/test/: bsdiff_bench.c  diskspace.c  executor_test.c  fuzz.c  hash_test.c  listtest.c  locktest.c  sha.tar  smoketest_device.sh  test_sha_device.sh  tm_format_test.c
swupd-client-2.36/test/bsdiff/: run.sh
swupd-client-2.36/test/bsdiff/data/: 1.bspatch.diff  1.bspatch.original  11.bspatch.diff  13.bspatch.diff  15.bspatch.modified  15.bspatch.original  2.bspatch.diff  3.bspatch.diff  3.bspatch.original  4.bspatch.diff  4.bspatch.original
swupd-client-2.36/test/signature/: README  ca.cert.test.bad.pem  genKeyAndCert.sh  sign.sh  verify.sh  verify_test.c
telemetrics-client-1.2.0/: AUTHORS  Makefile.am  TODO  autogen.sh  configure.ac
telemetrics-client-1.2.0/build-aux/make/: cflags.make
telemetrics-client-1.2.0/docs/: Doxyfile
telemetrics-client-1.2.0/src/: common.h  configuration.c  configuration.h  local.mk  log.h  main.c  spool.c  spool.h  telemdaemon.c  telemdaemon.h  telemetry.c  telemetry.h  telemetry.sym  util.c  util.h
telemetrics-client-1.2.0/src/data/: 99-crash-probe.conf.in  example.conf  journal-probe.service.in  libtelemetry.pc.in  local.mk  telemd.path.in  telemd.service.in  telemd.socket.in  telemetrics-dirs.conf.in  telemetrics.conf.in
telemetrics-client-1.2.0/src/probes/: crash_probe.c  hello.c  journal.c  local.mk
telemetrics-client-1.2.0/tests/: check_config.c  check_daemon.c  check_libtelemetry.c  local.mk
tiptop-2.2/: Makefile.in  configure  configure.ac
tree/: DESCRIPTION  MD5
xmlto-0.0.26/: Makefile.in  aclocal.m4  configure  xmlto.spec
(+378 files in other folders)
